# Shadow-AI-Gateway

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  Cedar_City_No_Online_Scheduling_Businesses.xlsx  Dockerfile  ENTERPRISE_LAYERS.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_OPERATOR_CHECKLIST.md  SETUP_GOVERNANCE.md  architecture_and_roadmap.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.cursor/qrspi/: 1_question.md  2_research.md  3_design.md  4_structure.md  5_plan.md  6_worktree.md  7_implement.md  8_pr.md  AUTONOMOUS_MODE.md  CONTEXT_ISOLATION.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ai-guardrail.yml  codeql.yml  enterprise-hygiene.yml  fossa-license.yml  gateway-ci.yml
.pr-drafts/: agent4.md  agent5.md  agent6.md  agent7.md  agent8.md  agent9.md
app/: __init__.py  config.py  main.py
app/api/v1/: chat.py
app/models/: __init__.py  schemas.py
app/proxy/: __init__.py  correlation.py  interceptor.py  payloads.py  streaming.py
app/proxy/providers/: __init__.py  anthropic.py  base.py  openai.py
app/scrub/: __init__.py  pipeline.py  types.py
app/security/: __init__.py  audit.py  auth.py  egress.py  http.py  rate_limit.py
dashboard/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
dashboard/src/: middleware.ts
dashboard/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: MiniCodeEditor.tsx  ReviewPanel.tsx  SiteLogoutButton.tsx
dashboard/src/lib/: auth.ts  codingGrade.ts  codingGradeBrowser.ts  codingSafety.ts  github.ts  ingest.ts  reviewAuth.ts  siteAuth.ts  store.ts
governance/: README.md  pyproject.toml
governance/governance/: __init__.py  cli.py  egress.py  models.py  pipeline.py
governance/governance/reporters/: __init__.py  github.py
governance/governance/signatures/: known_snippets.json
governance/governance/steps/: __init__.py  ast_guardrail.py  benchmark_engine.py  comprehension_gate.py  copyright_filter.py  fuzz_chamber.py  security_auditor.py
governance/tests/: test_fuzz_benchmark_helpers.py  test_reporters.py  test_steps.py
infra/terraform/: .checkov.yml  main.tf
perf/: README.md  locustfile.py
tests/: conftest.py  test_anthropic_streaming_contract.py  test_api_integration.py  test_auth_rate_limit.py  test_correlation.py  test_coverage_gaps.py  test_gateway_payloads.py  test_health.py  test_hypothesis_security.py  test_interceptor_contract.py  test_provider_adapters.py  test_provider_reliability.py  test_proxy_provider_selection.py  test_proxy_routing.py  test_scrub_pipeline_contract.py  test_security_layer.py  test_streaming_failures.py  test_streaming_relay.py
thoughts/qrspi/: README.md
thoughts/qrspi/2026-07-20-dashboard-ops-harden/: design.md  implementation.md  plan.md  pr.md  questions.md  research.md  structure.md  task.md  worktree.md
thoughts/qrspi/2026-07-20-gov-ast-gateway-rules/: design.md  plan.md  pr.md  questions.md  research.md  structure.md  task.md  worktree.md
(+60 files in other folders)
