[project]
name = "ai-governance-engine"
version = "0.1.0"
description = "Six-step AI code governance suite: AST, OWASP, fuzz, Big-O, copyright, review gate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
ai-guardrail = "governance.cli:app"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["governance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
